--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,25 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
-
-  Welcome to the HTML Portfolio Project
-
+  <div class="header">
+    <h1>Ricky Choi</h1>
+    <h2>Programmer</h2>
+  </div>
+  <div class="tagline">
+    <h3>Learn More About Me</h3>
+  </div>
+  <div class="skills">
+    <h3>My Skills</h3>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+    </ul>
+  </div>
+  <div class="contact">
+    <h3>Contact Me</h3>
+    <a href="https://github.com/rickywychoi">Github</a>
+    <p1>Email: cchaff0105@gmail.com</p1>
+  </div>
 </body>
 </html>
